# messages

./: Cargo.toml
src/: components.rs  events.rs  lib.rs  pages.rs  plugin.rs  service.rs
src/components/: avatar.rs  button.rs  card.rs  interface.rs  list_item.rs  message.rs  text_input.rs
src/pages/: messaging.rs  rooms.rs
