[package]
name = "messages"
version = "0.1.1"
edition = "2024"

[dependencies]
pelican_ui = {path = "../pelican_ui" }
pelican_ui_std = {path = "../pelican_ui_std" }
bitcoin = {path = "../bitcoin" }
profiles = {path = "../profiles" }
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.40", features = ["serde"] }
#maverick_os = "0.1.1"
maverick_os = {path="../maverick_os"}