[package]
name = "ramp-messages"
version = "0.2.2"
edition = "2024"
authors = ["Ella Mae <ellaammae@email.com>"]
description = "A Rust crate built on RAMP that provides all the tools to configure AIR messages."
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/messages"
documentation = "https://docs.rs/messages"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.40", features = ["serde"] }
pelican_ui = "1.1.4"
pelican_ui_std = "0.2.5"
profiles = "0.1.3"
maverick_os = "0.1.10"
